index.css
html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: 'Roboto', sans-serif;
    color:rgba(96, 28, 171, 1);
    background-color: rgba(27, 27, 31, 1);
}

.presentation .hello {
    margin: 0;
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 4.5vw;
    /* text-transform: uppercase; */
}
.presentation .name {
    margin: 0;
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 4.5vw;
    /* text-transform: uppercase; */
}
.presentation .network-links {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
}


@media (min-width: 40.0rem) { 
    .presentation {
        height: 100%;
        position: relative;
        border: 3px dashed rgba(130, 28, 171, 1);
      }
      
    .presentation .hello {
        margin: 0;
        position: absolute;
        top: 36%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: 2vw;
        /* text-transform: uppercase; */
    }
    .presentation .name {
        margin: 0;
        position: absolute;
        top: 45%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: 2vw;
        /* text-transform: uppercase; */
    }
    
    .presentation .network-links {
        position: absolute;
        top: 60%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
    
    .presentation a {
        margin-right: 5px;
        margin-left: 5px; 
    }    
}

